tests/fail/empty_shader.rs
use wgpu_shader_checker::include_wgsl;

fn main() {
    include_wgsl!("../../../../shaders/empty.wgsl");
}
