tests/fail/empty_shader.stderr
error: ../../../../shaders/empty.wgsl is empty
 --> tests/fail/empty_shader.rs:4:5
  |
4 |     include_wgsl!("../../../../shaders/empty.wgsl");
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `include_wgsl` (in Nightly builds, run with -Z macro-backtrace for more info)
